# python-basic

./: .gitignore  .pylintrc  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: pylint.yml  run-tests.yml  run_tests.yml
Django/sales_shop/sales_shop/: settings.py  urls.py
Django/sales_shop/shop/: admin.py  models.py  urls.py  views.py
Django/sales_shop/templates/: base.html
d/: app.py  docker-compose.yaml
d/templates/: about.html  create-add.html
homework_01/: main.py
homework_02/: base.py  car.py  engine.py  exceptions.py  plane.py
homework_03/: Dockerfile  main.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py
homework_05/static/css/: style.css
homework_05/templates/: base.html  index.html
homework_06/: Dockerfile  app.py  docker-compose.yaml
homework_06/templates/: index.html  viewpage.html
homework_06_(old)/: requirements.txt
homework_06_(old)/templates/: base.html  list.html
homework_07/sales_shop/: manage.py
homework_07/sales_shop/sales_shop/: settings.py  urls.py
homework_07/sales_shop/shop/: admin.py  models.py  urls.py  views.py
homework_08/: requirements.txt
homework_08/sales_shop/: manage.py  requirements.txt
homework_08/sales_shop/myauth/: forms.py  models.py  views.py
homework_08/sales_shop/sales_shop/: asgi.py  settings.py  (+2 more)
pythonProject/: Dockerfile  app.py  docker-compose.yaml  docker-compose_.yaml  names.py  pyproject.toml
pythonProject/my_flask_app/: requirements.txt
pythonProject/templates/: done.html
testing/: conftest.py
(+36 files in other folders)
