[tool.poetry]
name = "sales_shop"
version = "0.1.0"
description = ""
authors = ["user <gordienkoas@bk.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"
django-debug-toolbar = "^4.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
