[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["gordienkoas <127838071+gordienkoas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
